# team-1-app

./: .env  README.md  README_AGENT.md  docker-compose.yml  eslint.cjs.ts  index.html  package-lock.json  package.json  server.py  tsconfig.json
AIAgent/: .env.example  .gitignore  README.md  index.html  server.py
AIAgent/.claude/: settings.local.json
api/: generate-roadmap.js.ts
backendjs/: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  jest.config.js  package.json  tsconfig.json
backendjs/lightup-ai-service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backendjs/lightup-ai-service/src/: main.py
backendjs/lightup-ai-service/src/api/: assessment.py  roadmap.py  study_plan.py
backendjs/lightup-ai-service/src/config/: __init__.py  settings.py
backendjs/lightup-ai-service/src/models/: __init__.py  assessment.py  common.py  roadmap.py  study_plan.py
backendjs/lightup-ai-service/src/services/: __init__.py  ai_assessment.py  ai_roadmap.py  ai_study_plan.py  llm_client.py
backendjs/lightup-ai-service/src/utils/: __init__.py  graph_analyzer.py  logging_config.py  prompt_templates.py  time_calculator.py
backendjs/lightup-ai-service/tests/: conftest.py  test_assessment_api.py  test_main.py  test_services.py  test_study_plan_api.py
backendjs/prisma/: schema.prisma
backendjs/scripts/: dev-setup.sh
backendjs/src/: app.ts
backendjs/tests/: setup.ts
lib/: prisma.ts
prisma/: schema.prisma  seed.ts
src/: App.tsx  index.ts  main.tsx
src/app/: globals.css  page.tsx
src/components/: Roadmap.tsx  (+2 more)
(+41 files in other folders)
